--- a/BanSachsln/DTO/DTO.csproj
+++ b/BanSachsln/DTO/DTO.csproj
@@ -40,10 +40,14 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ChiTietPhieuNhap.cs" />
     <Compile Include="Common.cs" />
+    <Compile Include="KhachHang.cs" />
+    <Compile Include="LoaiKhachHang.cs" />
     <Compile Include="LoaiNhanVien.cs" />
     <Compile Include="NhanVien.cs" />
     <Compile Include="NhaXuatBan.cs" />
+    <Compile Include="PhieuNhap.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Sach.cs" />
     <Compile Include="TaiKhoan.cs" />
